# rag_handson

./: .gitignore  README.md  chainlit_app.py  openai_chat_completions.py  pyproject.toml
